syntax = "proto3";

package com.plema.grpc.user;

option java_multiple_files = true;

message GetUserByIdRequest {
  string id = 1;
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message CreateUserRequest {
  string pubKey = 1;
  string username = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string pubKey = 2;
  string username = 3;
  string email = 4;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message IsFieldTakenRequest {
  string field = 1;
  string value = 2;
}

message IsFieldTakenResponse {
  bool isTaken = 1;
}


service UserService {
  rpc createUser(CreateUserRequest) returns (UserResponse);
  rpc getUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc getUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  rpc getUserById(GetUserByIdRequest) returns (UserResponse);
  rpc getUsersByIds (GetUsersByIdsRequest) returns (UsersResponse);
  rpc isFieldTaken(IsFieldTakenRequest) returns (IsFieldTakenResponse);
}
